<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_start" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_baseline_my_location_24"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_routes"
            android:icon="@drawable/ic_baseline_location_on_black"
            android:title="@string/menu_routes" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_baseline_group_24"
            android:title="@string/menu_friends" />
        <item
            android:id="@+id/nav_invitations"
            android:icon="@drawable/ic_baseline_group_add_24"
            android:title="@string/menu_invitations" />

    </group>
    <group
        android:id="@+id/menu_logout"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/menu_logout" />
    </group>

</menu>