<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="pg.eti.ksg.ProjektInzynierski.ui.home.HomeFragment"
        android:label="@string/menu_start"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_account"
        android:name="pg.eti.ksg.ProjektInzynierski.ui.account.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/nav_map"
        android:name="pg.eti.ksg.ProjektInzynierski.ui.yourLocation.MapsFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_routes"
        android:name="pg.eti.ksg.ProjektInzynierski.ui.routes.RoutesFragment"
        android:label="@string/menu_routes"
        tools:layout="@layout/routes_fragment" />

    <fragment
        android:id="@+id/nav_friends"
        android:name="pg.eti.ksg.ProjektInzynierski.ui.friends.friends"
        android:label="@string/menu_friends"
        tools:layout="@layout/friends_fragment" />

    <fragment
        android:id="@+id/nav_invitations"
        android:name="pg.eti.ksg.ProjektInzynierski.ui.invitations.invitations"
        android:label="@string/menu_invitations"
        tools:layout="@layout/invitations_fragment" />
</navigation>