<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <Button
        android:id="@+id/LoginBtn"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:onClick="LoginBtnClick"
        android:text="@string/logIn"
        android:textColor="#ffffff"
        android:background="@drawable/brown_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password" />

    <Button
        android:id="@+id/NoAcountBtn"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:onClick="NoAccountBtnClick"
        android:textColor="#ffffff"
        android:background="@drawable/brown_button"
        android:text="@string/noAccount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginBtn" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Login"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:counterMaxLength="30"
        app:counterEnabled="true"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:hint="@string/login"
            android:maxLength="30"
            android:inputType="textNoSuggestions"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Password"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="10dp"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="30" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RVaccountsOnPhone"
        android:layout_width="match_parent"
        android:layout_height="308dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NoAcountBtn"
        tools:listitem="@layout/account_phone_recyclerview"/>

    <TextView
        android:id="@+id/loginActivityTxt"
        android:layout_width="232dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="18dp"
        android:text="@string/accontsOnPhone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NoAcountBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>