<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_menu"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_menu"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp">

        <ImageView
            android:id="@+id/RVFriendRoutesImg"
            android:layout_width="53dp"
            android:layout_height="53dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/my_routes"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"


            app:srcCompat="@drawable/ic_baseline_location_on_red" />

        <TextView
            android:id="@+id/RVFriendRoutesDateTxt"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="21dp"
            android:text="@string/date"
            app:layout_constraintStart_toEndOf="@+id/RVFriendRoutesLogin"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/RVFriendRoutesLogin"
            android:layout_width="130dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="21dp"
            android:text="@string/login"
            app:layout_constraintStart_toEndOf="@+id/RVFriendRoutesImg"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>